--- a/README
+++ b/README
@@ -1,1 +1,18 @@
 work in progress code snippets for coming soon median finding experiment
+see http://matpalm.com/median
+
+bash> ./generate_test_data.rb 1 40 100 1000 > numbers.all
+bash> cat numbers.all | ./spread_across_files.rb numbers 4
+generate a list of (approx) 1000 numbers whose min is 1, max is 100 and median is 40
+spread this across 4 files; numbers.0, numbers.1, numbers.2, numbers.3
+
+bash> cat numbers.[0-3] | ./median.rb
+run ruby version
+
+bash> erl -noshell -s median from_file numbers.all -s init stop 
+run erlang single process version
+
+bash> erl -noshell -s controller init numbers.[0-3] -s init stop
+run erlang multiple process version (all processes on local machine)
+
+
