--- a/README
+++ b/README
@@ -24,7 +24,7 @@ run erlang multiple process version (all processes on local machine) using full 
 bash> erl -noshell -run controller init worker numbers.[0-3]
 
 -----------------
-run erlang multiple process version (all processes on local machine) usnig list freq impl
+run erlang multiple process version (all processes on local machine) using list freq impl
+
 bash> erl -noshell -run spread main numbers.all numbers.dict 4
 bash> erl -noshell -run controller init worker_freq numbers.dict.[1-4]
-
