project page updated

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-work in progress code snippets for coming soon median finding experiment
-see http://matpalm.com/median
+finding the median of a trillion numbers
+http://matpalm.com/median
 
 -----------------
 generate a list of (approx) 1000 numbers whose min is 1, max is 100 and median is 40
